MyFirstProject/src/objects/Leave__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leave</relationshipLabel>
        <relationshipName>Leave</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Leave</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Leave Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>